[gd_scene load_steps=6 format=2]

[ext_resource path="res://music/music.gd" type="Script" id=1]
[ext_resource path="res://music/drums_calm.ogg" type="AudioStream" id=2]
[ext_resource path="res://music/drums_intense.ogg" type="AudioStream" id=3]
[ext_resource path="res://music/calm1_session.ogg" type="AudioStream" id=4]
[ext_resource path="res://music/calm2_session.ogg" type="AudioStream" id=5]

[node name="Music" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="DrumsCalm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true
bus = "DrumsCalm"

[node name="DrumsIntense" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
bus = "DrumsIntense"

[node name="GuitarCalm1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "GuitarCalm1"

[node name="GuitarCalm2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
bus = "GuitarCalm2"
